[tool.poetry]
name = "brilliant"
version = "0.1.0"
description = "A platform to solve quizzes online"
authors = ["Gurupratap Matharu <gurupratap.matharu@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
gunicorn = "^20.1.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.5"
whitenoise = "^6.2.0"
pillow = "^9.3.0"
django-allauth = "^0.51.0"
django-crispy-forms = "^1.14.0"
django-extensions = "^3.2.1"


[tool.poetry.group.dev.dependencies]
pylint = "^2.15.6"
autopep8 = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
